--- a/arch/arm/configs/n958st_defconfig
+++ b/arch/arm/configs/n958st_defconfig
@@ -2448,7 +2448,7 @@ CONFIG_FB_MSM_MDSS_WRITEBACK=y
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 CONFIG_ZTEMT_LCD_AVDD_CONFIG_BY_TPS65132=y
 # CONFIG_ZTEMT_LCD_ESD_TE_CHECK is not set
-CONFIG_ZTEMT_LCD_DISP_ENHANCE=y
+# CONFIG_ZTEMT_LCD_DISP_ENHANCE is not set
 # CONFIG_ZTEMT_LCD_BACKLIGHT_LINEAR_CONTROL_METHOLD is not set
 # CONFIG_EXYNOS_VIDEO is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
@@ -2571,7 +2571,7 @@ CONFIG_HID_MAGICMOUSE=y
 CONFIG_HID_MICROSOFT=y
 CONFIG_HID_MONTEREY=y
 CONFIG_HID_MULTITOUCH=y
-CONFIG_HID_NTRIG=y
+# CONFIG_HID_NTRIG is not set
 CONFIG_HID_ORTEK=y
 CONFIG_HID_PANTHERLORD=y
 CONFIG_PANTHERLORD_FF=y
